<?xml version="1.0"?>
<package format="2">
  <name>noah_2dnav</name>
  <version>0.2.0</version>
  <description>The noah_2dnav package</description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>amcl</depend>
  <depend>map_server</depend>
  <depend>noah_control_utils</depend>

  <export>

  </export>

</package>
