<?xml version="1.0"?>
<package format="2">
  <name>noah_control</name>
  <version>0.1.0</version>
  <description>The noah_control package</description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rospy</depend>

  <export>

  </export>

</package>
