<?xml version="1.0"?>
<package format="2">
  <name>noah_control_utils</name>
  <version>0.2.0</version>
  <description>The noah_control_utils package</description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <depend>move_base</depend>
  <depend>move_base_sequence</depend>

  <export>

  </export>

</package>
