<?xml version="1.0"?>
<package format="2">
  <name>noah_description</name>
  <version>0.1.0</version>
  <description>The noah_description package</description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <depend>teb_local_planner</depend>

  <export>

  </export>

</package>
