<?xml version="1.0"?>
<package format="2">
  <name>noah_gazebo</name>
  <version>0.1.0</version>
  <description>
    Gazebo simulation for noah robot.
  </description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>

  <depend>gazebo_ros</depend>
  <depend>gazebo_plugins</depend>

  <depend>gazebo</depend>
  <depend>noah_description</depend>
  <depend>noah_2dnav</depend>
  <depend>noah_rtabmap</depend>
  <depend>noah_rviz</depend>
  <depend>noah_control_utils</depend>
  <depend>robot_state_publisher</depend>
  <depend>rostopic</depend>
  <depend>rviz</depend>

  <export>
    <gazebo_ros gazebo_model_path="${prefix}/models"/>
  </export>

</package>
