<?xml version="1.0"?>
<package format="2">
  <name>noah_rtabmap</name>
  <version>0.2.0</version>
  <description>The noah_rtabmap package</description>

  <author email="juancarosella96@ekumenlabs.com">JuanCarosella</author>
  <maintainer email="juancarosella96@ekumenlabs.com">JuanCarosella</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>nodelet</depend>
  <depend>roslaunch</depend>
  <depend>rtabmap_ros</depend>

  <export>

  </export>

</package>
